--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta
       name="viewport"
-      content="width=devicewidth, initial-scale=1, , maximum-scale=1"
+      content="width=device-width, initial-scale=1, , maximum-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
     <!--
